// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createTypography() should return matching value using custom value (function) 1`] = `
Object {
  "body1": Object {
    "color": "rgba(0,0,0,0.87)",
    "fontFamily": "Georgia",
    "fontSize": "16px",
    "fontWeight": 300,
    "lineHeight": "1.5em",
  },
  "body2": Object {
    "color": "rgba(0,0,0,0.87)",
    "fontFamily": "Georgia",
    "fontSize": "14px",
    "fontWeight": 300,
    "lineHeight": "1.4em",
  },
  "button": Object {
    "color": "rgba(0,0,0,0.87)",
    "fontFamily": "Georgia",
    "fontSize": "16px",
    "fontWeight": 700,
    "textTransform": "none",
  },
  "caption": Object {
    "color": "rgba(0,0,0,0.6)",
    "fontFamily": "Georgia",
    "fontSize": "12px",
    "fontWeight": 300,
    "lineHeight": "1.2em",
    "textTransform": "none",
  },
  "fontFamily": "Georgia",
  "fontWeightLight": 200,
  "fontWeightMedium": 700,
  "fontWeightRegular": 300,
  "htmlFontSize": 14,
  "title1": Object {
    "@media (min-width:48em)": Object {
      "fontSize": "34px",
    },
    "color": "rgba(0,0,0,0.6)",
    "fontFamily": "\\"Comic Sans\\"",
    "fontSize": "22px",
    "fontWeight": 200,
    "lineHeight": "1.6em",
    "textTransform": "uppercase",
  },
  "title2": Object {
    "@media (min-width:48em)": Object {
      "fontSize": "30px",
    },
    "color": "rgba(0,0,0,0.6)",
    "fontFamily": "\\"Comic Sans\\"",
    "fontSize": "22px",
    "fontWeight": 200,
    "lineHeight": "1.5em",
    "textTransform": "uppercase",
  },
  "title3": Object {
    "@media (min-width:48em)": Object {
      "fontSize": "26px",
    },
    "color": "rgba(0,0,0,0.6)",
    "fontFamily": "\\"Comic Sans\\"",
    "fontSize": "22px",
    "fontWeight": 200,
    "lineHeight": "1.4em",
    "textTransform": "uppercase",
  },
  "title4": Object {
    "@media (min-width:48em)": Object {
      "fontSize": "23px",
    },
    "color": "rgba(0,0,0,0.6)",
    "fontFamily": "\\"Comic Sans\\"",
    "fontSize": "22px",
    "fontWeight": 300,
    "lineHeight": "1.3em",
    "textTransform": "uppercase",
  },
  "title5": Object {
    "color": "rgba(0,0,0,0.87)",
    "fontFamily": "Georgia",
    "fontSize": "20px",
    "fontWeight": 300,
    "lineHeight": "1.2em",
  },
  "title6": Object {
    "@media (min-width:48em)": Object {
      "fontSize": "18px",
    },
    "color": "rgba(0,0,0,0.87)",
    "fontFamily": "Georgia",
    "fontSize": "16px",
    "fontWeight": 300,
    "lineHeight": "1.1em",
  },
}
`;

exports[`createTypography() should return matching value using custom value (object) 1`] = `
Object {
  "body1": Object {
    "color": "rgba(0,0,0,0.87)",
    "fontFamily": "Verdana",
    "fontSize": "1.1428571428571428rem",
    "fontWeight": 300,
    "lineHeight": "1.3125em",
  },
  "body2": Object {
    "color": "rgba(0,0,0,0.87)",
    "fontFamily": "Verdana",
    "fontSize": "1rem",
    "fontWeight": 300,
    "lineHeight": "1.2857142857142858em",
  },
  "button": Object {
    "color": "rgba(0,0,0,0.87)",
    "fontFamily": "Verdana",
    "fontSize": "1.1428571428571428rem",
    "fontWeight": 700,
    "textTransform": "none",
  },
  "caption": Object {
    "color": "rgba(0,0,0,0.6)",
    "fontFamily": "Verdana",
    "fontSize": "0.8571428571428571rem",
    "fontWeight": 300,
    "lineHeight": "1.3333333333333333em",
    "textTransform": "none",
  },
  "fontFamily": "Verdana",
  "fontWeightLight": 200,
  "fontWeightMedium": 700,
  "fontWeightRegular": 300,
  "htmlFontSize": 14,
  "title1": Object {
    "color": "rgba(0,0,0,0.6)",
    "fontFamily": "Verdana",
    "fontSize": "2.4285714285714284rem",
    "fontWeight": 200,
    "lineHeight": "1.2647058823529411em",
    "textTransform": "uppercase",
  },
  "title2": Object {
    "color": "rgba(0,0,0,0.6)",
    "fontFamily": "Verdana",
    "fontSize": "2.142857142857143rem",
    "fontWeight": 200,
    "lineHeight": "1.1333333333333333em",
    "textTransform": "uppercase",
  },
  "title3": Object {
    "color": "rgba(0,0,0,0.6)",
    "fontFamily": "Verdana",
    "fontSize": "1.8571428571428572rem",
    "fontWeight": 200,
    "lineHeight": "1.1538461538461537em",
    "textTransform": "uppercase",
  },
  "title4": Object {
    "color": "rgba(0,0,0,0.6)",
    "fontFamily": "Verdana",
    "fontSize": "1.6428571428571428rem",
    "fontWeight": 300,
    "lineHeight": "1.2608695652173914em",
    "textTransform": "uppercase",
  },
  "title5": Object {
    "color": "rgba(0,0,0,0.87)",
    "fontFamily": "Verdana",
    "fontSize": "1.4285714285714286rem",
    "fontWeight": 300,
    "lineHeight": "1.3em",
  },
  "title6": Object {
    "color": "rgba(0,0,0,0.87)",
    "fontFamily": "Verdana",
    "fontSize": "1.2857142857142858rem",
    "fontWeight": 300,
    "lineHeight": "1.2777777777777777em",
  },
}
`;

exports[`createTypography() should return matching value using default parameter value 1`] = `
Object {
  "body1": Object {
    "color": "rgba(0,0,0,0.87)",
    "fontFamily": "Helvetica, Arial, sans-serif",
    "fontSize": "1rem",
    "fontWeight": 400,
    "lineHeight": "1.3125em",
  },
  "body2": Object {
    "color": "rgba(0,0,0,0.87)",
    "fontFamily": "Helvetica, Arial, sans-serif",
    "fontSize": "0.875rem",
    "fontWeight": 400,
    "lineHeight": "1.2857142857142858em",
  },
  "button": Object {
    "color": "rgba(0,0,0,0.87)",
    "fontFamily": "Helvetica, Arial, sans-serif",
    "fontSize": "1rem",
    "fontWeight": 500,
    "textTransform": "none",
  },
  "caption": Object {
    "color": "rgba(0,0,0,0.6)",
    "fontFamily": "Helvetica, Arial, sans-serif",
    "fontSize": "0.75rem",
    "fontWeight": 400,
    "lineHeight": "1.3333333333333333em",
    "textTransform": "none",
  },
  "fontFamily": "Helvetica, Arial, sans-serif",
  "fontWeightLight": 300,
  "fontWeightMedium": 500,
  "fontWeightRegular": 400,
  "htmlFontSize": 16,
  "title1": Object {
    "color": "rgba(0,0,0,0.6)",
    "fontFamily": "Helvetica, Arial, sans-serif",
    "fontSize": "2.125rem",
    "fontWeight": 300,
    "lineHeight": "1.2647058823529411em",
    "textTransform": "uppercase",
  },
  "title2": Object {
    "color": "rgba(0,0,0,0.6)",
    "fontFamily": "Helvetica, Arial, sans-serif",
    "fontSize": "1.875rem",
    "fontWeight": 300,
    "lineHeight": "1.1333333333333333em",
    "textTransform": "uppercase",
  },
  "title3": Object {
    "color": "rgba(0,0,0,0.6)",
    "fontFamily": "Helvetica, Arial, sans-serif",
    "fontSize": "1.625rem",
    "fontWeight": 300,
    "lineHeight": "1.1538461538461537em",
    "textTransform": "uppercase",
  },
  "title4": Object {
    "color": "rgba(0,0,0,0.6)",
    "fontFamily": "Helvetica, Arial, sans-serif",
    "fontSize": "1.4375rem",
    "fontWeight": 400,
    "lineHeight": "1.2608695652173914em",
    "textTransform": "uppercase",
  },
  "title5": Object {
    "color": "rgba(0,0,0,0.87)",
    "fontFamily": "Helvetica, Arial, sans-serif",
    "fontSize": "1.25rem",
    "fontWeight": 400,
    "lineHeight": "1.3em",
  },
  "title6": Object {
    "color": "rgba(0,0,0,0.87)",
    "fontFamily": "Helvetica, Arial, sans-serif",
    "fontSize": "1.125rem",
    "fontWeight": 400,
    "lineHeight": "1.2777777777777777em",
  },
}
`;
